# Intelligent-Digital-Phenotyper

./: README.md
code/: circadian_tracker.py  config.py  data_loaders.py  debug_bvp_peaks.py  export_tflite.py  extract_activity_all.py  extract_wesad_all.py  features.py  inspect_wesad_features.py  requirements.txt  sleep_classifier.py  synapse_metadata_manifest.tsv  test_features.py  train_autoencoder.py  train_stress_classifier.py  tremor_classifier.py  verify_data.py
features/: activity_features.npz  wesad_features.npz
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  main.cpp
firmware/main/ble/: ble_export.cpp  ble_export.h
firmware/main/dsp/: feature_extractor.cpp  feature_extractor.h  fft_wrapper.cpp  fft_wrapper.h  iir_filter.cpp  iir_filter.h
firmware/main/heads/: head_b_tremor.cpp  head_b_tremor.h  head_c_autoencoder.cpp  head_c_autoencoder.h  head_d_stress.cpp  head_d_stress.h  head_e_sleep.cpp  head_e_sleep.h  head_f_circadian.cpp  head_f_circadian.h
firmware/main/sensors/: gsr_eda.cpp  gsr_eda.h  i2c_bus.cpp  i2c_bus.h  max30102.cpp  max30102.h  mpu9250.cpp  mpu9250.h  sensor_pins.h
firmware/main/storage/: baseline_store.cpp  baseline_store.h  event_logger.cpp  event_logger.h
models/: autoencoder_final.keras  autoencoder_fold_S10.keras  autoencoder_fold_S11.keras  autoencoder_fold_S13.keras  autoencoder_fold_S14.keras  autoencoder_fold_S15.keras  autoencoder_fold_S16.keras  autoencoder_fold_S17.keras  autoencoder_fold_S2.keras  autoencoder_fold_S3.keras  autoencoder_fold_S4.keras  tremor_params.h  (+9 more)
(+3 files in other folders)
